examples/mongo/mongo-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mongo-example
  labels:
    name: mongo-example
